# auto-precommit-onboard

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/pc_onboard/: __init__.py  app.py  cli.py  detect.py  mise.py  runner.py  templates.py  tooling.py
tests/: conftest.py  test_app.py  test_cli.py  test_detect.py  test_integration.py  test_mise.py  test_runner.py  test_templates.py  test_tooling.py
