[project]
name = "pc-onboard"
version = "0.1.0"
description = "CLI tool to automate repository onboarding for enterprise pre-commit standards"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
]

[project.scripts]
pc-onboard = "pc_onboard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pc_onboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
